# reverie

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  rust-toolchain.toml  validate.sh
.github/workflows/: ci.yml  merge-gate.yml
ai_docs/: sabre-determinism-analysis.md
docs/: MERGE_QUEUE.md
experimental/docs/: reverie_v2_design_doc.md
experimental/nostd-print/: Cargo.toml
experimental/reverie-host/: Cargo.toml
experimental/reverie-rpc/: Cargo.toml
experimental/reverie-rpc-macros/: Cargo.toml
experimental/reverie-sabre/: Cargo.toml
experimental/reverie-sabre-macros/: Cargo.toml
experimental/riptrace/: Cargo.toml
experimental/scrape-syscalls/: main.rs  syscall_info.rs
experimental/traceviz/: Cargo.toml  traceviz  traceviz.dotslash.py
public_autocargo/experimental/: Cargo.toml
public_autocargo/safeptrace/: Cargo.toml
reverie/: Cargo.toml
reverie-dbi/: Cargo.toml  README.md  build.rs
reverie-dbi/native/: CMakeLists.txt  client.c
reverie-dbi/scripts/: build-client.sh  test-cpuid.sh  test-echo.sh
reverie-dbi/src/: launcher.rs  lib.rs  tools.rs
reverie-dbi/tests/: cpuid_probe.c
reverie-examples/: Cargo.toml  README.md  chaos.rs  chunky_print.rs  counter1.rs  counter2.rs  debug.rs  noop.rs  pedigree.rs  strace_minimal.rs
reverie-examples/chrome-trace/: event.rs  global_state.rs  main.rs  tool.rs
reverie-examples/strace/: config.rs  filter.rs  global_state.rs  main.rs  tool.rs
reverie-kvm/: Cargo.toml  README.md
reverie-kvm/src/: bootstrap.rs  cpuid.rs  elf.rs  error.rs  executor.rs  lib.rs  memory.rs  runtime.rs  syscall.rs  tools.rs  vm.rs
reverie-kvm/tests/: static_elf.rs  strace.rs  vmcall.rs
reverie-memory/: Cargo.toml
reverie-memory/src/: addr.rs  lib.rs  local.rs
reverie-process/: Cargo.toml
reverie-process/src/: builder.rs  child.rs  clone.rs  container.rs  env.rs  error.rs  exit_status.rs  fd.rs  id_map.rs  lib.rs  mount.rs  namespace.rs  net.rs  pid.rs  pty.rs  spawn.rs  stdio.rs  util.rs
reverie-ptrace/: Cargo.toml
reverie-ptrace/src/: backend.rs  children.rs  debug.rs  decoder.rs  error.rs  lib.rs  perf.rs  regs.rs  stack.rs  task.rs  testing.rs  (+4 more)
reverie-syscalls/: Cargo.toml
reverie-util/: Cargo.toml
safeptrace/: Cargo.toml  README.md
scripts/: dump-vdso.py
tests/: backtrace.rs  basics.rs  busywait.rs  convert.rs  cpuid.rs  delay_signal.rs  exit.rs  parallelism.rs  rdtsc.rs  signal.rs  signalfd.rs  spinlock.rs  stack.rs  stat.rs  state.rs  suppression.rs  thread_start.rs  timer_semantics.rs  vdso.rs  vfork.rs
(+210 files in other folders)
