[package]
name = "reverie-dbi"
version = "0.1.0"
authors = ["Meta Platforms"]
edition = "2024"
repository = "https://github.com/facebookexperimental/reverie"
license = "BSD-2-Clause"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.186"
reverie = { version = "0.1.0", path = "../reverie" }
reverie-memory = { version = "0.1.0", path = "../reverie-memory" }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
